clusters/common/shop/prd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
spec:
  ports:
  - port: 8180
    targetPort: 8180
    name: account
  selector:
    app: account
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  ports:
  - port: 8090
    targetPort: 8090
    name: apigateway
  selector:
    app: apigateway
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  labels:
    app: bff
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: bff
  selector:
    app: bff
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  ports:
  - port: 8181
    targetPort: 8181
    name: cart
  selector:
    app: cart
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  ports:
  - port: 8182
    targetPort: 8182
    name: order
  selector:
    app: order
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  ports:
  - port: 8183
    targetPort: 8183
    name: payment
  selector:
    app: payment
---
apiVersion: v1
kind: Service
metadata:
  name: product
  labels:
    app: product
spec:
  ports:
  - port: 8184
    targetPort: 8184
    name: product
  selector:
    app: product
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-consumer
  labels:
    app: rabbitmq-consumer
spec:
  ports:
  - port: 8082
    targetPort: 8082
    name: rabbitmq-consumer
  selector:
    app: rabbitmq-consumer
