clusters/common/shop/prd/ingress.yaml
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: apigateway
#   annotations:
#     kubernetes.io/ingress.class: nginx-eks
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#     ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: a1001c0e806a748679deb2115e1930bf-0f412fe779c96488.elb.ap-northeast-2.amazonaws.com
#     http:
#       paths:
#       - path: /v1/accounts
#         backend:
#           serviceName: account
#           servicePort: 8180
#       - path: /v1/accountbanks
#         backend:
#           serviceName: account
#           servicePort: 8180
#       - path: /v1/login
#         backend:
#           serviceName: account
#           servicePort: 8180
#       - path: /v1/carts
#         backend:
#           serviceName: cart
#           servicePort: 8181
#       - path: /v1/orders
#         backend:
#           serviceName: order
#           servicePort: 8182
#       - path: /v1/payments
#         backend:
#           serviceName: payment
#           servicePort: 8183
#       - path: /v1/categories
#         backend:
#           serviceName: product
#           servicePort: 8184
#       - path: /v1/products
#         backend:
#           serviceName: product
#           servicePort: 8184
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shop.edge.kubepia.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bff
            port:
              number: 8081
